# m5dx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  sdkconfig
main/: CMakeLists.txt  application.cpp  application.h  component.mk  debug.h  m5dx_module.cpp  m5dx_module.h  main.cpp  target.cpp  target.h
main/audio/: audio.cpp  audio.h  audio_out.cpp  audio_out.h  audio_stream.h  opn_slot.h  opna_volume_adjuster.cpp  opna_volume_adjuster.h  roudness.h  sample_generator.cpp  sample_generator.h  sampling_rate_converter.cpp  sampling_rate_converter.h  sound_chip.h  sound_chip_manager.cpp  sound_chip_manager.h  ym_sample_decoder.cpp  ym_sample_decoder.h
main/graphics/: color.h  display.cpp  display.h  font_data.cpp  font_data.h  font_manager.cpp  font_manager.h  framebuffer.cpp  framebuffer.h  framebuffer_base.cpp  framebuffer_base.h  texture.cpp  texture.h
main/io/: ble_manager.cpp  ble_manager.h  bluetooth.cpp  bluetooth.h  bt_a2dp_source_manager.cpp  bt_a2dp_source_manager.h  file_stream.cpp  file_stream.h  file_util.cpp  file_util.h  file_util_std.cpp  imu.cpp  imu.h  memory_stream.cpp  memory_stream.h  midi.h  sd.cpp  sd.h  stream.cpp  stream.h
main/music_player/: file_format.cpp  file_format.h  mdxplayer.cpp  mdxplayer.h  music_player.h  music_player_manager.cpp  music_player_manager.h  play_list.cpp  play_list.h  s98player.cpp  s98player.h
main/mxdrv/: depend.h  mxdrv.cpp  mxdrv.h  sound_iocs.cpp  sound_iocs.h  sys.h  x68sound.cpp  x68sound.h
main/sound_sys/: ay8910.cxx  ay8910.h  c140_emu.cxx  c140_emu.h  k053260_emu.cxx  (+36 more)
(+70 files in other folders)
